--- a/package.json
+++ b/package.json
@@ -23,11 +23,7 @@
     "email": "raynos2@gmail.com"
   },
   "dependencies": {
-    "global": "~4.3.0",
-    "is-function": "^1.0.1",
-    "once": "~1.1.1",
-    "parse-headers": "^2.0.0",
-    "xtend": "^4.0.0"
+    "lodash": "^3.10.1"
   },
   "devDependencies": {
     "for-each": "^0.3.2",
